RACE2/AKS_Istio_Deployments/RACE2.SecurityProvider/RACE2SecurityProviderDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: race2securityprovider-deployment
  namespace: securityprovider
spec:
  selector:
    matchLabels:
      app: race2securityprovider-pod
  template:
    metadata:
      labels:
        app: race2securityprovider-pod
    spec:
      containers:
      - name: race2securityprovider-container
        image: race2acr.azurecr.io/securityprovider:v1
        ports:
        - containerPort: 80
