RACE2/AKS_Istio_Deployments/RACE2.SecurityProvider/RACE2SecurityProviderService.yaml
apiVersion: v1
kind: Service
metadata:
  name: race2securityprovider-service
  namespace: securityprovider
spec:
  selector:
    app: race2securityprovider-pod
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
