RACE2/AKS_Istio_Deployments/RACE2.SecurityProvider/RACE2SecurityProviderGateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: race2securityprovider-gateway
  namespace: securityprovider
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - hosts:
        - "race2securityprovider.gov.uk"
    port:
      number: 80
      name: http
      protocol: HTTP
