RACE2/AKS_Istio_Deployments/RACE2.SecurityProvider/RACE2SecurityProviderVirtualService.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: race2securityprovider-virtualservice
  namespace: securityprovider
spec:
  hosts:
  - "race2app.gov.uk"
  gateways:
  - race2securityprovider-gateway
  http:
  - route:
    - destination:
        port:
          number: 80
        host: race2securityprovider-service
